Cleaned up for Cloudant. Made some small changes in code to empty the displays before new data was loaded. Also made some small changes to code for Cloudant

--- a/ASD/week03/honeyDoApp/app/couchapp.json
+++ b/ASD/week03/honeyDoApp/app/couchapp.json
@@ -1,4 +1,4 @@
 {
-    "name": "Name of your CouchApp",
-    "description": "CouchApp"
+    "name": "Honey Do App",
+    "description": "ASD project"
 }
