--- a/ASD/week03/honeyDoApp/couchapp.rc
+++ b/ASD/week03/honeyDoApp/couchapp.rc
@@ -2,6 +2,9 @@
   "env": {
     "local": {
       "db": "http://127.0.0.1:5984/asdproject"
+    },
+    "cloudant":{
+    		"db": "https://lsouttherantstracendstak:oca83K1VMgW7X6qfYEUOJI1X@agvinsant.cloudant.com/asdproject"
     }
   }
 }
